--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "grinch-player",
 	"productName": "Grinch Player",
-	"version": "0.1.0",
+	"version": "0.0.0",
 	"description": "Technoprank player, soundboard",
 	"license": "MIT",
 	"author": {
@@ -34,7 +34,8 @@
 		"envs": [
 			"node",
 			"browser"
-		]
+		],
+        "space": 4
 	},
 	"np": {
 		"publish": false,
