--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "grinch-player",
 	"productName": "Grinch Player",
 	"version": "0.1.0",
-	"description": "Technoprank player, soundboard",
+	"description": "Плеер для технопранков",
 	"license": "MIT",
 	"author": {
 		"name": "Nik"
@@ -27,6 +27,13 @@
 	"devDependencies": {
 		"electron": "^5.0.4",
 		"electron-builder": "^20.43.0",
+		"eslint": "^5.16.0",
+		"eslint-config-xo": "^0.26.0",
+		"eslint-plugin-ava": "^7.1.0",
+		"eslint-plugin-import": "^2.17.3",
+		"eslint-plugin-no-use-extend-native": "^0.4.0",
+		"eslint-plugin-promise": "^4.1.1",
+		"eslint-plugin-unicorn": "^9.1.0",
 		"np": "^5.0.3",
 		"xo": "^0.24.0"
 	},
@@ -43,31 +50,9 @@
 	},
 	"build": {
 		"appId": "com.niknik.GrinchPlayer",
-		"mac": {
-			"category": "public.app-category.social-networking",
-			"darkModeSupport": true
-		},
-		"dmg": {
-			"iconSize": 160,
-			"contents": [
-				{
-					"x": 180,
-					"y": 170
-				},
-				{
-					"x": 480,
-					"y": 170,
-					"type": "link",
-					"path": "/Applications"
-				}
-			]
-		},
-		"linux": {
-			"target": [
-				"AppImage",
-				"deb"
-			],
-			"category": "Network;Chat"
-		}
+		"nsis": {
+            "oneClick": false,
+            "allowToChangeInstallationDirectory": true
+        }
 	}
 }
