--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"pack": "electron-builder --dir",
 		"dist": "electron-builder --windows",
 		"release": "np",
-        "sass": "node-sass index.scss index.css"
+		"sass": "node-sass index.scss index.css"
 	},
 	"dependencies": {
 		"electron-context-menu": "^0.12.1",
@@ -26,6 +26,8 @@
 		"electron-util": "^0.12.0"
 	},
 	"devDependencies": {
+		"bulma": "^0.7.5",
+		"bulmaswatch": "^0.7.2",
 		"electron": "^5.0.4",
 		"electron-builder": "^20.43.0",
 		"eslint": "^5.16.0",
@@ -35,6 +37,9 @@
 		"eslint-plugin-no-use-extend-native": "^0.4.0",
 		"eslint-plugin-promise": "^4.1.1",
 		"eslint-plugin-unicorn": "^9.1.0",
+		"fork-awesome": "^1.1.7",
+		"jquery": "^3.4.1",
+		"jquery-ui": "^1.12.1",
 		"node-sass": "^4.12.0",
 		"np": "^5.0.3",
 		"xo": "^0.24.0"
@@ -44,7 +49,12 @@
 			"node",
 			"browser"
 		],
-		"space": 4
+		"space": 4,
+        "esnext ": false,
+        "rules": {
+            "prefer-arrow-callback": 0,
+            "prefer-const": 0
+        }
 	},
 	"np": {
 		"publish": false,
