--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
 	"name": "grinch-player",
 	"productName": "Grinch Player",
 	"version": "0.2.0",
-	"description": "Плеер для технопранков",
+	"description": "Технопранк-плеер",
 	"license": "MIT",
 	"author": {
 		"name": "Nik"
@@ -18,16 +18,19 @@
 		"sass": "node-sass index.scss index.css"
 	},
 	"dependencies": {
+		"bulma": "^0.7.5",
+		"bulmaswatch": "^0.7.2",
 		"electron-context-menu": "^0.12.1",
 		"electron-debug": "^3.0.0",
 		"electron-store": "^3.3.0",
 		"electron-unhandled": "^2.2.0",
 		"electron-updater": "^4.0.6",
-		"electron-util": "^0.12.0"
+		"electron-util": "^0.12.0",
+		"fork-awesome": "^1.1.7",
+		"jquery": "^3.4.1",
+		"jquery-ui": "^1.12.1"
 	},
 	"devDependencies": {
-		"bulma": "^0.7.5",
-		"bulmaswatch": "^0.7.2",
 		"electron": "^5.0.4",
 		"electron-builder": "^20.43.0",
 		"eslint": "^5.16.0",
@@ -37,9 +40,6 @@
 		"eslint-plugin-no-use-extend-native": "^0.4.0",
 		"eslint-plugin-promise": "^4.1.1",
 		"eslint-plugin-unicorn": "^9.1.0",
-		"fork-awesome": "^1.1.7",
-		"jquery": "^3.4.1",
-		"jquery-ui": "^1.12.1",
 		"node-sass": "^4.12.0",
 		"np": "^5.0.3",
 		"xo": "^0.24.0"
