--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
 		"electron-util": "^0.12.0",
 		"fork-awesome": "^1.1.7",
 		"jquery": "^3.4.1",
-		"jquery-ui": "^1.12.1"
+		"jquery-ui-dist": "^1.12.1"
 	},
 	"devDependencies": {
 		"electron": "^5.0.4",
@@ -42,6 +42,7 @@
 		"eslint-plugin-unicorn": "^9.1.0",
 		"node-sass": "^4.12.0",
 		"np": "^5.0.3",
+		"ryba-js": "0.0.9",
 		"xo": "^0.24.0"
 	},
 	"xo": {
