--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"electron-updater": "^4.0.6",
 		"electron-util": "^0.12.0",
 		"fork-awesome": "^1.1.7",
+		"hotkeys-js": "^3.6.11",
 		"jquery": "^3.4.1",
 		"jquery-ui-dist": "^1.12.1"
 	},
