Animate block background with audio progress

--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
 		"hotkeys-js": "^3.6.11",
 		"howler": "^2.1.2",
 		"jquery": "^3.4.1",
-		"jquery-ui-dist": "^1.12.1"
+		"jquery-ui-dist": "^1.12.1",
+		"lodash": "^4.17.11"
 	},
 	"devDependencies": {
 		"electron": "^5.0.4",
@@ -57,7 +58,7 @@
 		"rules": {
 			"prefer-arrow-callback": 0,
 			"prefer-const": 0,
-            "unicorn/prevent-abbreviations": 0
+			"unicorn/prevent-abbreviations": 0
 		}
 	},
 	"np": {
