--- a/package.json
+++ b/package.json
@@ -57,7 +57,9 @@
 		"rules": {
 			"prefer-arrow-callback": 0,
 			"prefer-const": 0,
-			"unicorn/prevent-abbreviations": 0
+			"unicorn/prevent-abbreviations": 0,
+            "prefer-destructuring": 0,
+            "object-shorthand": 0
 		}
 	},
 	"np": {
