--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"electron-store": "^3.3.0",
 		"electron-unhandled": "^2.2.0",
 		"electron-util": "^0.12.0",
+		"fast-glob": "^3.0.2",
 		"fork-awesome": "^1.1.7",
 		"hotkeys-js": "^3.6.11",
 		"howler": "^2.1.2",
@@ -58,8 +59,8 @@
 			"prefer-arrow-callback": 0,
 			"prefer-const": 0,
 			"unicorn/prevent-abbreviations": 0,
-            "prefer-destructuring": 0,
-            "object-shorthand": 0
+			"prefer-destructuring": 0,
+			"object-shorthand": 0
 		}
 	},
 	"np": {
