--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"electron-store": "^3.3.0",
 		"electron-unhandled": "^2.2.0",
 		"electron-util": "^0.12.0",
+		"farmhash": "^3.0.0",
 		"fast-glob": "^3.0.2",
 		"fork-awesome": "^1.1.7",
 		"hotkeys-js": "^3.6.11",
