--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"howler": "^2.1.2",
 		"jquery": "^3.4.1",
 		"jquery-ui-dist": "^1.12.1",
+		"list.js": "^1.5.0",
 		"lodash": "^4.17.11",
 		"simplebar": "^4.1.0"
 	},
