--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"sass": "node-sass index.scss index.css"
 	},
 	"dependencies": {
+		"@sindresorhus/slugify": "^0.9.1",
 		"bulma": "^0.7.5",
 		"bulmaswatch": "^0.7.2",
 		"electron-context-menu": "^0.12.1",
@@ -27,6 +28,7 @@
 		"electron-util": "^0.12.0",
 		"farmhash": "^3.0.0",
 		"fast-glob": "^3.0.2",
+		"filenamify": "^4.1.0",
 		"fork-awesome": "^1.1.7",
 		"hotkeys-js": "^3.6.11",
 		"howler": "^2.1.2",
