Add tooltips in Edit mode, rename and delete buttons for blocks

--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
 		"hotkeys-js": "^3.6.11",
 		"howler": "^2.1.2",
 		"jquery": "^3.4.1",
+		"jquery-jeditable": "^2.0.10",
 		"jquery-ui-dist": "^1.12.1",
 		"list.js": "^1.5.0",
 		"lodash": "^4.17.11",
-		"simplebar": "^4.1.0"
+		"simplebar": "^4.1.0",
+		"tippy.js": "^4.3.4"
 	},
 	"devDependencies": {
 		"electron": "^5.0.4",
