--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"fork-awesome": "^1.1.7",
 		"hotkeys-js": "^3.6.11",
 		"howler": "^2.1.2",
+		"iconv-lite": "^0.5.0",
 		"jquery": "^3.4.1",
 		"jquery-jeditable": "^2.0.10",
 		"jquery-ui-dist": "^1.12.1",
