Remember opened sidebars, load classes after page is loaded

--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,6 @@
 {
     "extends": "xo",
     "rules": {
-        "indent": ["error", 4]
+        "indent": ["error", 4, {"SwitchCase": 1}]
     }
 }
