--- a/package.json
+++ b/package.json
@@ -40,7 +40,8 @@
 		"list.js": "^1.5.0",
 		"lodash": "^4.17.11",
 		"simplebar": "^4.1.0",
-		"tippy.js": "^4.3.4"
+		"tippy.js": "^4.3.4",
+		"v8-compile-cache": "^2.1.0"
 	},
 	"devDependencies": {
 		"electron": "^5.0.4",
