--- a/package.json
+++ b/package.json
@@ -57,6 +57,8 @@
 		"eslint-plugin-unicorn": "^9.1.0",
 		"node-sass": "^4.12.0",
 		"np": "^5.0.3",
+		"react": "^16.9.0",
+		"react-dom": "^16.9.0",
 		"xo": "^0.24.0"
 	},
 	"xo": {
