Update readme and package.json - add mac build

--- a/package.json
+++ b/package.json
@@ -84,10 +84,11 @@
 		"win": {
 			"target": "portable"
 		},
+        "mac": {
+            "target": "zip"
+        },
         "linux": {
-            "target": [
-                "AppImage"
-            ]
+            "target": "AppImage"
         }
 	}
 }
