--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
 		"fast-glob": "^3.0.2",
 		"filenamify": "^4.1.0",
 		"fork-awesome": "^1.1.7",
+		"fuse.js": "^3.4.6",
 		"hotkeys-js": "^3.6.11",
 		"howler": "^2.1.2",
 		"iconv-lite": "^0.5.0",
