--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
 		"jquery-ui-dist": "^1.12.1",
 		"list.js": "^1.5.0",
 		"lodash": "^4.17.11",
+		"moment": "^2.24.0",
 		"shepherd.js": "^5.0.0",
 		"simplebar": "^4.1.0",
 		"tippy.js": "^4.3.4",
