Copy sound files to resources separately, use relative folder

--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
 	},
 	"build": {
 		"appId": "com.Nik.GrinchPlayer",
+        "extraResources": "sounds/*.mp3",
 		"win": {
 			"target": "portable"
 		},
