--- a/.travis.yml
+++ b/.travis.yml
@@ -9,7 +9,9 @@ deploy:
   provider: releases
   api_key: $GITHUB_TOKEN
   file_glob: true
-  file: dist/GrinchPlayer*
+  file:
+    - dist/GrinchPlayer-*-mac.zip
+    - dist/GrinchPlayer*.AppImage
   skip_cleanup: true
   on:
     tags: true
