Fix wrong extension of sound files, duh

--- a/package.json
+++ b/package.json
@@ -85,7 +85,7 @@
 	},
 	"build": {
 		"appId": "com.Nik.GrinchPlayer",
-		"extraResources": "sounds/*.mp3",
+		"extraResources": "sounds/*.ogg",
 		"win": {
 			"target": "portable"
 		},
