--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ osx_image: xcode10.2
 language: node_js
 node_js: '12'
 script:
-  - npm test
+  - npm cache --force clean
   - npm run dist
 deploy:
   provider: releases
