--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
 	"productName": "GrinchPlayer",
 	"version": "1.7.1",
 	"description": "Технопранк-плеер",
-	"license": "MIT",
+	"license": "CC BY-NC-SA 4.0",
 	"author": {
 		"name": "Nik"
 	},
